Closed Bug 1898830 Opened 1 year ago Closed 1 year ago

NSS doesn't allow for P-384 / P-521 ECDSA signatures shorter than maximum length when using softoken

Categories

(NSS :: Libraries, defect, P3)

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jschanck, Assigned: jschanck)

References

Details

Attachments

(2 files)

Like Bug 1893404, but for the P-384 implementation from Bug 1854438 and the P-521 implementation from Bug 1854439.

Attachment #9403915 - Attachment description: WIP: Bug 1898830 - pad short P-384 and P-521 signatures. → Bug 1898830 - pad short P-384 and P-521 signatures. r=rrelyea

@jschanck I have added the gtest

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: