Bug 1898830 - pad short P-384 and P-521 signatures. r=nss-reviewers,nkulatova

Differential Revision: https://phabricator.services.mozilla.com/D211637

--HG--
branch : NSS_3_101_BRANCH
extra : source : c6e7f06a8182ce4d9ffe75cfd3a0f0daf6321ab6